--- a/index.html
+++ b/index.html
@@ -32,9 +32,35 @@
 
          <script src= "http://code.jquery.com/jquery-1.10.0.min.js"></script>
          <script src= "http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
-         <!-- <script type="text/javascript" src="https://api.geoloqi.com/js/versions/geoloqi-1.0.13.min.js"></script> -->
+         <script src="https://api.geoloqi.com/js/versions/geoloqi-1.0.13.min.js"></script>
   </head>
   <body>
+
+    <div id="signin_page" data-role="page" data-theme="b">
+      <div data-role="header" data-theme="b">
+        <h1>Sign-in</h1>
+      </div>
+
+      <div data-role="content"> 
+        <div data-role="fieldcontain" class="ui-hide-label">
+          <label for="email">Email</label>
+          <input type="text" name="email" id="email" placeholder="Email"/>
+          <label for="password">Password</label>
+          <input type="password" name="password" id="password" placeholder="Password"/>
+          <button class="ui-btn-hidden" type="submit" id="signin" data-inline="true">Sign in</button>
+          <a id="linkDialog" href="#registerDialog" data-rel="dialog" data-transition="flip" style="display:none;"></a>
+        </div>
+      </div>
+    </div>
+
+    <div data-role="page" id="registerDialog">
+      <div data-role="content">
+        <h1>Are you a new user?</h1>
+        <a href="#signin_page" data-role="button" data-inline="true">No</a>
+        <a href="#mapPage" data-role="button" data-inline="true">Yes</a>
+      </div>
+    </div>
+
       <div id="mapPage"
            class="ui-page ui-body-b ui-header ui-bar-b ui-header-fixed"
            role="banner"
