layers added to search_db api

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
               <div data-role='panel' id='layer_panel' data-position="right"  data-display="push" data-theme='b'>
 
-                  <ul class="tour-options" data-role="listview">
+                  <ul id='layer_list' class="tour-options" data-role="listview">
 
                       <li>
                           <a href='chgLayer' data-role="button" data-rel="dialog">
