retrieve layers and clear

--- a/index.html
+++ b/index.html
@@ -98,12 +98,17 @@
                       <a id='viewUser' data-role="button">
                           <i class="icon-user icon-2x"></i>&nbsp;You</a>
                   </li>
+                  <li>
+                      <a id='clearLayers' data-role="button" data-rel="dialog">
+                          <i class="icon-minus-sign icon-2x" ></i>&nbsp;Clear Map</a>
+                  </li>
 
                   <li>
                       <a href='signin_page' data-role="button" data-rel="dialog">
                           <i class="icon-signin icon-2x" ></i>&nbsp;Sign In</a>
                   </li>
                   
+
 
               </ul>
 
