new events for adding searches

--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
 
                      <div id="map_holder">
                          <div id="map_content"
-                                class="ui-content" 
+                                class="ui-content search_map" 
                                 role="main"
                                 data-role="content" 
                                 data-theme="b">
                            </div>  
                            <div id="mapbox_content"
-                                  class="ui-content" 
+                                  class="ui-content search_map" 
                                   role="main"
                                   data-role="content" 
                                   data-theme="b">
