prep for user locations

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                      </div>
 
 
-          <div data-role='panel' id='menu_panel' data-position="left"  data-display="push" data-theme='b'>
+          <div data-role='panel' id='menu_panel' class='app_panel' data-position="left"  data-display="push" data-theme='b'>
 
               <ul class="tour-options" data-role="listview">
 
@@ -130,7 +130,7 @@
           </div>
 
 
-            <div data-role='panel' id='layer_panel' data-position="right" data-display="push" data-theme='b'>
+            <div class='app_panel' data-role='panel' id='layer_panel' data-position="right" data-display="push" data-theme='b'>
                 <ul id='layer_list' class="tour-options" data-role="listview">
                     <li>LAYERS</li>
                     <li id='current_layer' data-current-layer=''>
