fix panel close process

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
                   </div>
                   <div data-role="content" >
                       <p id='delete_layer_name' ></p>
-                      <button class="ui-btn-hidden" type="submit" id="submit_delete_layer"  data-inline="true">Yes, delete it.</button> 
-                      <button class="ui-btn-hidden cancel_button" type="submit" data-inline="true">Cancel</button> 
+                      <button id="submit_delete_layer"class="ui-btn-hidden" type="submit"  data-inline="true">Yes, delete it.</button> 
+                      <button id="cancel_delete_layer" class="ui-btn-hidden cancel_button" type="submit" data-inline="true">Cancel</button> 
                   </div>
             </div>
 
