fema demo cleanup

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                                 </span>
                              </a>
 
-                             <a id="btnToggleMap"  data-role='button'  data-inline='true' class='header_button'>
+<!--                              <a id="btnToggleMap"  data-role='button'  data-inline='true' class='header_button'>
                                      <i class="icon-picture icon-2x"></i>
                              </a>
-                        
+        -->                 
                              <a id='viewUser' data-role="button" data-inline='true'  class='header_button'>
                                    <i class="icon-user icon-2x"></i>
                              </a>
