--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                 data-role="content" 
                                 data-theme="b">
                            </div>  
-                           <div id="map_content"
+                           <div id="mapbox_content"
                                   class="ui-content search_map" 
                                   role="main"
                                   data-role="content" 
