trying to reduce memory for ios 6

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                 </span>
                              </a>
 
-                             <a id="btnToggleMap"  data-role='button'  data-inline='true' class='header_button'>
+                             <a id="toggle_map"  data-role='button'  data-inline='true' class='header_button'>
                                  <i class="icon-picture icon-2x"></i>
                              </a>
                     
@@ -78,19 +78,6 @@
                      </div><!-- end header         -->
 
                      <div id="map_holder">
-                         <div id="map_content"
-                                class="ui-content search_map" 
-                                role="main"
-                                data-role="content" 
-                                data-theme="b">
-                           </div>  
-                           <div id="mapbox_content"
-                                  class="ui-content search_map" 
-                                  role="main"
-                                  data-role="content" 
-                                  data-theme="b">
-                             </div>  
-
                      </div>
 
 
@@ -219,7 +206,7 @@
     <script src="//api.tiles.mapbox.com/mapbox.js/v1.2.0/mapbox.js"></script>
 
     <script type="text/javascript" src="./js/search_db.js"></script>
-    <script type="text/javascript" src="./js/ggl_map.js"></script>
+    <script type="text/javascript" src="./js/googleMap.js"></script>
     <script type="text/javascript" src="./js/mapboxMap.js"></script>
 
     <script type="text/javascript" src="./js/jqm_app.js"></script>
