--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
          <script src= "http://code.jquery.com/jquery-1.10.0.min.js"></script>
          <script src= "http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
 
-        <script type="text/javascript"  src="http://maps.google.com/maps/api/js?key=AIzaSyBIN_IsvlHoxb6QQtIhB1OjisrFuuCixAQ&libraries=geometry&sensor=false"></script>
         <script src="https://api.geoloqi.com/js/versions/geoloqi-1.0.13.min.js"></script>
 
   </head>
@@ -91,8 +90,13 @@
                   </li>
 
                   <li>
+                      <a id="viewUsers" data-role="button">
+                          <i class="icon-group icon-2x"></i>&nbsp;Users</a>
+                  </li>
+
+                  <li>
                       <a id="viewSearches" data-role="button">
-                          <i class="icon-globe icon-2x"></i>&nbsp;All</a>
+                          <i class="icon-globe icon-2x"></i>&nbsp;Searches</a>
                   </li>
 
                   <li>
@@ -206,7 +210,6 @@
     <script src="//api.tiles.mapbox.com/mapbox.js/v1.2.0/mapbox.js"></script>
 
     <script type="text/javascript" src="./js/search_db.js"></script>
-    <script type="text/javascript" src="./js/googleMap.js"></script>
     <script type="text/javascript" src="./js/mapboxMap.js"></script>
 
     <script type="text/javascript" src="./js/jqm_app.js"></script>
