add group listviews; ability to add app users to groups

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
    <div id="viewGroups" data-role='page' data-theme="b" data-register-user='false'>
         <div data-role="header" data-add-back-btn="true">
-            <h2 id ='H1'>
+            <h2>
                 Groups
             </h2>
         </div>
@@ -213,12 +213,24 @@
 
     <div id="viewGroupMembers" data-role='page' data-theme="b" data-register-user='false'>
         <div data-role="header" data-add-back-btn="true">
-            <h2 id ='H2'>
+            <h2>
                 Group Members
             </h2>
         </div>
         <div id="membersContainer" data-role="content" >
             <ul id='memberList' data-role='listview'></ul>
+            <a id="btnExitMembers" href="index.html" data-role="button" data-inline="true" >Exit</a>
+        </div>
+    </div>
+
+    <div id="viewUsers" data-role='page' data-theme="b" data-register-user='false'>
+        <div data-role="header" data-add-back-btn="true">
+            <h2>
+                Search Users
+            </h2>
+        </div>
+        <div id="usersContainer" data-role="content" >
+            <ul id='userList' data-role='listview'></ul>
         </div>
     </div>
 
