new improved toggle, say goodbye to google code

--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
                      </div><!-- end header         -->
 
                      <div id="map_holder">
+                         <div id="map_content" class="ui-content search_map" role="main" data-role="content" data-theme="b"></div>
+
                      </div>
 
 
