new improved toggle, say goodbye to google code

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
                      data-role="header"
                      data-position="fixed"
                      data-theme="b">
-                         <div data-role='container' >
+                         <div data-role='container' > 
                              <a href='#menu_panel' data-role='button'  data-inline='true'>
                                     <i class="icon-chevron-sign-left icon-2x"></i>
                              </a>
-                          
+                          TOGGLE ONLY
                              <a href='#layer_panel' data-role='button'  data-inline='true' class='header_button'>
                                      <i class="icon-chevron-sign-right icon-2x"></i>
                                 </span>
