adding layer filtering

--- a/index.html
+++ b/index.html
@@ -132,11 +132,6 @@
                           </div>
                         </div>
                     </li>
-                    
-                    <li id='current_layer' data-current-layer=''>
-                        <p>New searches will be added to</p>
-                        <p id="layer_label"></p>
-                    </li>
                 </ul>
             </div>
 
@@ -211,7 +206,7 @@
     <script src="//api.tiles.mapbox.com/mapbox.js/v1.2.0/mapbox.js"></script>
 
     <script type="text/javascript" src="./js/search_db.js"></script>
-    <script type="text/javascript" src="./js/mapboxMap.js"></script>
+    <script type="text/javascript" src="./js/search_layer.js"></script>
 
     <script type="text/javascript" src="./js/jqm_app.js"></script>
 
