--- a/index.html
+++ b/index.html
@@ -235,10 +235,9 @@
     </div>
 
     <script type="text/javascript" src="./js/socket.io.min.js"></script>
-    <script src="//api.tiles.mapbox.com/mapbox.js/v1.2.0/mapbox.js"></script>
-
+    <script src='//api.tiles.mapbox.com/mapbox.js/v1.3.1/mapbox.js'></script>
     <script type="text/javascript" src="./js/search_db.js"></script>
-    <script type="text/javascript" src="./js/search_layer.js"></script>
+    <script type="text/javascript" src="./js/search_markers.js"></script>
 
     <script type="text/javascript" src="./js/jqm_app.js"></script>
 
