modularizing (modulating?) users into search_app

--- a/index.html
+++ b/index.html
@@ -238,14 +238,16 @@
 
     <!-- Rudimentary Module Loading - must be in order -->
     <script type="text/javascript" src="./js/search.app.js"></script>
-    <script type="text/javascript" src="./js/search.db.js"></script>
+    <script type="text/javascript" src="./js/search.data.js"></script>
+    <script type="text/javascript" src="./js/search.users.js"></script>
+
     <script type="text/javascript" src="./js/search.markers.js"></script>
     <script type="text/javascript" src="./js/search.layer.menu.js"></script>
     <script type="text/javascript" src="./js/search.main.menu.js"></script>
 
 
 
-    <script type="text/javascript" src="./js/search.messages.js"></script>
+    <script type="text/javascript" src="./js/socket.messages.js"></script>
     <script type="text/javascript" src="./js/ready.js"></script>
     
   </body>
