--- a/index.html
+++ b/index.html
@@ -240,7 +240,8 @@
     <script type="text/javascript" src="./js/search.app.js"></script>
     <script type="text/javascript" src="./js/search.data.js"></script>
     <script type="text/javascript" src="./js/search.users.js"></script>
-
+    <script type="text/javascript" src="./js/search.location.js"></script>
+     
     <script type="text/javascript" src="./js/search.markers.js"></script>
     <script type="text/javascript" src="./js/search.layer.menu.js"></script>
     <script type="text/javascript" src="./js/search.main.menu.js"></script>
