added back location watching, renamed users to auth

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     <!-- Rudimentary Module Loading - must be in order -->
     <script type="text/javascript" src="./js/search.app.js"></script>
     <script type="text/javascript" src="./js/search.data.js"></script>
-    <script type="text/javascript" src="./js/search.users.js"></script>
+    <script type="text/javascript" src="./js/search.auth.js"></script>
     <script type="text/javascript" src="./js/search.location.js"></script>
      
     <script type="text/javascript" src="./js/search.markers.js"></script>
