prepping for user markers on map

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     <script type="text/javascript" src="./js/search.auth.js"></script>
     <script type="text/javascript" src="./js/search.location.js"></script>
      
-    <script type="text/javascript" src="./js/search.markers.js"></script>
+    <script type="text/javascript" src="./js/search.searches.js"></script>
     <script type="text/javascript" src="./js/search.layer.menu.js"></script>
     <script type="text/javascript" src="./js/search.main.menu.js"></script>
 
