show logged in users on map

--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
                                    <i class="icon-user icon-2x"></i>
                              </a>
 
-                             <a href='#viewGroups' id='btnViewGroups' data-role="button" data-inline='true'  class='header_button'>
+                             <!-- <a href='#viewGroups' id='btnViewGroups' data-role="button" data-inline='true'  class='header_button'>
                                    <i class="icon-group icon-2x"></i>
-                             </a>
+                             </a> -->
 
                          </div>
                      
@@ -241,6 +241,7 @@
     <script type="text/javascript" src="./js/search.data.js"></script>
     <script type="text/javascript" src="./js/search.auth.js"></script>
     <script type="text/javascript" src="./js/search.location.js"></script>
+    <script type="text/javascript" src="./js/search.users.js"></script>
      
     <script type="text/javascript" src="./js/search.searches.js"></script>
     <script type="text/javascript" src="./js/search.layer.menu.js"></script>
