add client to users bounds

--- a/index.html
+++ b/index.html
@@ -57,11 +57,6 @@
                        </li>
 
                        <li>
-                           <a id="viewUsers" data-role="button">
-                               <i class="icon-group icon-2x"></i>&nbsp;Users</a>
-                       </li>
-
-                       <li>
                            <a id="viewSearches" data-role="button">
                                <i class="icon-globe icon-2x"></i>&nbsp;Searches</a>
                        </li>
@@ -122,9 +117,9 @@
                                    <i class="icon-user icon-2x"></i>
                              </a>
 
-                             <!-- <a href='#viewGroups' id='btnViewGroups' data-role="button" data-inline='true'  class='header_button'>
+                             <a id='viewUsers' data-role="button" data-inline='true'  class='header_button'>
                                    <i class="icon-group icon-2x"></i>
-                             </a> -->
+                             </a>
 
                          </div>
                      
