form in search ending

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                    </ul>
                </div>
 
-                   <div id='layer_panel' class='app_panel' data-role='panel' data-position="right" data-display="push" data-theme='b'>
+                   <div id='layer_panel' class='layer_panel' data-role='panel' data-position="right" data-display="push" data-theme='b'>
                       <ul id='layer_list' data-role="listview">
                           <li>Search Groups</li>
                           <li>
