--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
 
                    <div id='layer_panel' class='layer_panel' data-role='panel' data-position="right" data-display="push" data-theme='b'>
                       <ul id='layer_list' data-role="listview">
-                          <li>Search Groups</li>
                           <li>
                               <div class="ui-grid-a">
                                 <div class="ui-block-a">
@@ -133,7 +132,7 @@
 
             <div  id="new_layer_popup" data-role="popup">
                 <div data-role="header" data-close-btn="right">
-                    <h2>Create a new search group?</h2>
+                    <h2>Create a new search team?</h2>
                   </div>
                   <div data-role="content" >
                       <div id='new_layer_fields' data-role="fieldcontain" class="ui-hide-label">
@@ -145,7 +144,7 @@
             </div>
             <div  id="delete_layer_popup" data-role="popup">
                 <div data-role="header" data-close-btn="right">
-                    <h2>Do you want to delete this search group?</h2>
+                    <h2>Do you want to delete this search teams?</h2>
                   </div>
                   <div data-role="content" >
                       <p id='delete_layer_name' ></p>
