--- a/index.html
+++ b/index.html
@@ -79,8 +79,10 @@
                      </div><!-- end header         -->
                      
                      <div id="map_holder">
-                         <div id="map_content" class="ui-content search_map" role="main" data-role="content" data-theme="b"></div>
-
+                         <div id="map_content" 
+                         class="ui-content search_map" 
+                         role="main" data-role="content" data-theme="b">
+                         </div>
                      </div>
                      
 
